Improving buildMonth function

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         {
             "name": "Dart & Flutter",
-            "request": "launch",
+            "request": "attach",
             "type": "dart"
         }
     ]
